We Mai 31 10:10:36 CEST 2006

	- Fixed PGTYPESdate_from_timestamp because some characters got lost there.

Tu Jun  6 12:09:56 CEST 2006

	- Fixed two more memory leaks in ecpglib.
	- Synced parser.

Mo Jun 19 11:15:50 CEST 2006

	- Do not use already free'ed errmsg, bug found by Joachim Wieland
	  <joe@mcknight.de>.

We Jun 21 09:24:53 CEST 2006

	- Added fixes from the coverity report send in by Joachim Wieland
	  <joe@mcknight.de>.
	- Added missing error handling in a few functions in ecpglib.

we Jun 21 13:37:00 CEST 2006

	- Added some more coverity report patches send in by Martijn van
	  Oosterhout <kleptog@svana.org>.

Su Jun 25 11:27:46 CEST 2006

	- Moved some free() calls that coverity correctly complains about.

Mo Jun 26 11:05:25 CEST 2006

	- Added some more coverity report patches send in by Joachim Wieland
	  <joe@mcknight.de>.

Mo Jun 26 16:08:23 CEST 2006

	- Added missing braces to prevent a segfault after usage of an
	  undeclared cursor.

We Jul  5 12:17:28 CEST 2006

	- Fixed most of the remaining Coverity bugs.

Fr Jul 28 11:00:51 CEST 2006

	- Added more SoC changes by Joachim Wieland <joe@mcknight.de>:
		- SHOW statement puts result into a variable
		- COPY TO STDOUT works
		- Connection identifier has to be unique
	- Variables should be free'ed only once.

Tu Aug  1 15:04:52 CEST 2006

	- Applied patch by Joachim Wieland <joe@mcknight.de> to fix segfault
	  occuring when using --enable-thread-safety.

We Aug  2 13:15:25 CEST 2006

	- Synced parser and keyword list.
	- Implemented EXEC SQL UNDEF.
	- Applied first version of the regression test patch by Joachim
	  Wieland <joe@mcknight.de>.

Fr Aug  4 10:44:30 CEST 2006

	- Applied test suite update by Joachim Wieland <joe@mcknight.de>.

Mo Aug  7 14:56:44 CEST 2006

	- Joachim fixed some bugs in numeric handling in pgtypeslib.

Tu Aug  8 13:26:25 CEST 2006

	- Made parser check for valid copy to/from stdin/stdout combinations.
	- Set ecpg library version to 5.2.
	- Set ecpg version to 4.2.1.